--- a/Java/WebApplication/Groep9/nbproject/project.properties
+++ b/Java/WebApplication/Groep9/nbproject/project.properties
@@ -26,6 +26,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.mysql-connector-java-5.1.18-bin.jar=C:\\Program Files\\NetBeans 7.2.1\\ide\\modules\\ext\\mysql-connector-java-5.1.18-bin.jar
+file.reference.mysql-connector-java-5.1.22-bin.jar=C:\\Users\\3130079\\Documents\\PHL\\2TIN\\Java Advanced\\Periode 2\\Hoofdstukken\\H28_ Accessing_Databases_With_JDBC\\ch28_1\\mysql-connector-java-5.1.22-bin.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,7 +41,10 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${libs.hibernate-support.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.22-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
